test/cgip/PP/error/inheritance/rep/reperr-39.vdm
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration

class A is subclass of D

operations 
  public Test : () ==> char  
  Test () ==
        return 'a'

end A














